# Chemcomm-crystallization-benchmark

./: .gitignore  CITATION.cff  DATA_AVAILABILITY.md  DATA_LICENSE.md  LICENSE  LICENSE_NOTES.md  MANIFEST.tsv  NOTICE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  REDUCTION_NOTE.md  environment.yml  pyproject.toml  requirements.txt
data/benchmark_tables/: master_benchmark_labels_v1.md  master_benchmark_table_v1.csv  master_benchmark_table_v1_summary.md  pdb_core_model_proteins_condition_entries_v2.csv  pdb_core_model_proteins_condition_explicit_species_bridge_v2.csv  pdb_core_model_proteins_condition_species_inventory_v2.csv  pdb_core_model_proteins_explicit_nonpolymer_inventory_v2.csv  pdb_core_model_proteins_metal_cation_summary_v2.csv  pdb_core_model_proteins_species_contrast_summary_v3.csv  pdb_core_model_proteins_species_entry_status_v3.csv  pdb_core_model_proteins_species_outcome_summary_v3.csv  pdb_core_model_proteins_species_retention_summary_v2.csv  pdb_core_model_proteins_top_species_by_protein_v2.csv
docs/: benchmark_variable_definitions_v1.md
scripts/: build_expanded_species_inventory.py  build_species_analysis_v2.py  build_species_aware_ml_table_v2.py  build_species_downstream_assets_v3.py  make_figure1_benchmark_architecture_v3.py  make_figure2_condition_landscape_v5.py  make_figure3_ml_bcde_row_v1.py  make_figureS10_pooled_combined.py  organize_revised_submission_figures_v1.py  run_figure4_ml_all_panels_v3.py  run_per_protein_species_retention_fig4_v1.py  run_species_aware_ml_baselines_v2.py  run_species_aware_ml_rigorous_v3.py
src/hank/: __init__.py
(+43 files in other folders)
