[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wallis-crystallization-benchmark"
version = "0.1.0"
description = "Workspace scaffold for solvent- and ion-aware protein crystallization review and benchmark development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "requests>=2.32",
  "pyyaml>=6.0",
  "biopython>=1.84",
  "polars>=1.0",
  "pyarrow>=15.0",
  "duckdb>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wallis"]
